--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -47,6 +47,13 @@ blog:
   VerwandteBeitraege: Related post
   VorherigerBeitrag: Previous post
   NaechsterBeitrag: Next post
+pagination:
+  Seiten: Pages
+  Aktuelle: Current
+  Seite: Page
+  Vorherige: Previous
+  Naechste: Next
+  Uebersprungen: Übersprungen
 start:
   Slogan: Open Knowledge<br/>for the digital society
   Intro: >
