translate press, job, donate pages

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -5,7 +5,7 @@ navig:
   Projekte: Projects
   Blog: Blog
   Services: Services
-  Spenden: Donation
+  Spenden: Donate
   Mehr: More
   Team: Team
   Vorstand: Board
