--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -15,6 +15,7 @@ navig:
   Impressum: Contact
 titles:
   Themen: Topics
+  Impressum: Contact
 themen:
   Themen: Topics
   Mehr: learn more
@@ -73,3 +74,14 @@ start:
 footer:
   license: >
     The Open Knowledge Foundation Deutschland (OKF DE) is an independent non-profit organisation registered in Berlin, Germany in 2011 under VR 30468 B. The contents of this website are, if not stated otherwise, licensed with <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a>.
+impressum:
+  Adresse: Address
+  Kontakt: Contact
+  WeitereKanaele: Other Channels
+  Webseitendesign: Website design
+  VereinsregisterNr: Register of Association Number
+  Steuernummer: Tax ID
+  VAT: VAT
+  EMail: Email
+  Telefon: Phone
+  Fax: Fax
