blogvorschau, related_pages plugin, projekte format

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -71,6 +71,7 @@ start:
   NewsletterText: >
     Du möchtest über die Open Knowledge Foundation auf dem Laufenden bleiben?<br>Dann trag Dich in unseren monatlichen Newsletter ein!
   NewsletterJa: Abonnieren
+  AusUnseremBlog: Aus unserem Blog
 footer:
   license: >
     Open Knowledge Foundation Deutschland e.V. ist ein eingetragener Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben,
