--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -71,6 +71,7 @@ start:
   NewsletterText: >
     You want to stay up to date on our activities? Sign up here for our monthly newsletter:
   NewsletterJa: Sign up
+  AusUnseremBlog: From our Blog
 footer:
   license: >
     The Open Knowledge Foundation Deutschland (OKF DE) is an independent non-profit organisation registered in Berlin, Germany in 2011 under VR 30468 B. The contents of this website are, if not stated otherwise, licensed with <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a>.
