--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -42,7 +42,7 @@ thema:
   WeitereThemen: More Topics
 blog:
   FeedAbo: subscribe with your feedreeder
-  Mehr: Read full post
+  Mehr: Read full post...
   Von: by
   AmDatum: "on"
   VerwandteBeitraege: Related post
