Eileen team update
new photo and description

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -94,7 +94,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Eileen ist seit Juli Praktikantin bei der OKF DE. Gemeinsam mit Julia und Fiona arbeitet sie am Projekt „Code for Germany“. Vor allem ist sie für Kommunikation und Öffentlichkeitsarbeit zuständig. Sie hat einen Bachelor in Philosophie und bald auch einen Master in Logik."
+  bio: "Eileen ist seit Juli 2015 bei der OKF DE. Gemeinsam mit Julia und Fiona arbeitet sie am Projekt Code for Germany. Vor allem ist sie für Kommunikation und Öffentlichkeitsarbeit zuständig. Sie hat einen Bachelor in Philosophie und einen Master in Logik."
   mail: eileen.wagner@okfn.de
   twitter: flapperleenie
   website: http://eileenwagner.xyz/
