share buttons für blogposts

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -43,6 +43,7 @@ blog:
   Mehr: weiterlesen...
   Von: von
   AmDatum: am
+  TeileAuf: Blogpost teilen auf
   VerwandteBeitraege: Verwandte Beiträge
   VorherigerBeitrag: Vorheriger Beitrag
   NaechsterBeitrag: Nächster Beitrag
