--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -45,6 +45,7 @@ blog:
   Mehr: Read full post...
   Von: by
   AmDatum: "on"
+  TeileAuf: "Share on"
   VerwandteBeitraege: Related post
   VorherigerBeitrag: Previous post
   NaechsterBeitrag: Next post
