--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -245,7 +245,7 @@
   board: 1
   advisory: 0
   position: Beisitzer
-  bio: "Christian Heise ist Politologe und wissenschaftlicher Mitarbeiter am Hybrid Publishing Lab im Centre for Digital Cultures an der Leuphana Universität Lüneburg, wo er zum Thema Open Science promoviert. Zuvor war er als Manager bei der Deutschen Presse Agentur und bei ZEIT ONLINE tätig. Neben seiner ehrenamtlichen Tätigkeit im Vorstand der Open Knowledge Foundation ist er auch Gründungs- und Vorstandsmitglied im Förderverein für freie Netzwerke e.V. (freifunk.net). Christian redet gern und schreibt viel über seine Schwerpunktthemen: Open Data, Open Government, Open Access, Open Science und Open Networks."
+  bio: "Christian Heise ist Politologe, promoviert zum Thema Open Science am Centre for Digital Cultures an der Leuphana Universität Lüneburg und ist Mitglied des Google Digital News Initiative (DNI) Fund Teams. Zuvor war er als Manager bei der Deutschen Presse Agentur und bei ZEIT ONLINE tätig. Neben seiner ehrenamtlichen Tätigkeit im Vorstand der Open Knowledge Foundation ist er auch Gründungs- und Vorstandsmitglied im Förderverein für freie Netzwerke e.V. (freifunk.net). Christian redet gern und schreibt viel über seine Schwerpunktthemen: Open Data, Open Government, Open Access, Open Science und offene Netzwerke."
   mail: christian.heise@okfn.org
   twitter: christianheise
   website: https://christianhei.se
