--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -153,7 +153,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Michael ist Senior Trainer beim Open-Data-Trainingsprogramms der OKF DE. Er arbeitet als Datenjournalist, Trainer und Dozent. An der Hochschule für Technik und Wirtschaft Berlin war Michael von 2013 bis 2015 Lehrbeauftragter für Open Data. Er engagiert sich seit 2010 für mehr und besser nutzbare offene Daten und ist Mitorganisator des jährlichen Berlin Open Data Day. Zwischen 2004 und 2012 arbeitete Michael als Online-Redakteur bei Tagesspiegel, Rundfunk Berlin-Brandenburg und Hasso-Plattner-Institut."
+  bio: "Michael ist Senior Trainer beim Open-Data-Trainingsprogramm der OKF DE. Er arbeitet als Datenjournalist, Trainer und Dozent. An der Hochschule für Technik und Wirtschaft Berlin war Michael von 2013 bis 2015 Lehrbeauftragter für Open Data. Er engagiert sich seit 2010 für mehr und besser nutzbare offene Daten und ist Mitorganisator des jährlichen Berlin Open Data Day. Zwischen 2004 und 2012 arbeitete Michael als Online-Redakteur bei Tagesspiegel, Rundfunk Berlin-Brandenburg und Hasso-Plattner-Institut."
   mail: michael.hoerz@okfn.de
   twitter: data_meining
   website: http://www.michael-hoerz.de
@@ -193,7 +193,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Anna Alberts leitet bei der Open Knowledge Foundation Deutschland als das EU-Forschungsprojekt OpenBudgets.eu. Anna hat Internationale Entwicklungsstudien und Internationale Beziehungen studiert und als Referentin mit den Schwerpunkten Daten- und Geopolitik im Planungsstab des Außenministeriums der Niederlande gearbeitet. Ehrenamtlich setzt sich Anna beim Peace Innovation Lab Berlin für die Förderung von Social Innovation-Projekten ein."
+  bio: "Anna Alberts leitet bei der Open Knowledge Foundation Deutschland das EU-Forschungsprojekt OpenBudgets.eu. Anna hat Internationale Entwicklungsstudien und Internationale Beziehungen studiert und als Referentin mit den Schwerpunkten Daten- und Geopolitik im Planungsstab des Außenministeriums der Niederlande gearbeitet. Ehrenamtlich setzt sich Anna beim Peace Innovation Lab Berlin für die Förderung von Social Innovation-Projekten ein."
   bio_en: "Anna Alberts leads the EU research project OpenBudgets.eu. She has a degree in international development studies and international relations and worked as desk officer for data- and geopolitics at the Ministry of Foreign Relations of the Netherlands. Anna develops Social Innovation projectsat the Peace Innovation Lab in Berlin."
   mail: anna.alberts@okfn.de
   twitter: Anna_Alberts
