bild für blog-autor: "okf"

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -483,3 +483,15 @@
   mail:
   twitter:
   website:
+
+- name: OKF
+  title:
+  img: okf
+  staff: 0
+  board: 0
+  advisory: 0
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
