define url for sitemap.xml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 markdown: rdiscount
 highlighter: pygments
 fullurl: 'https://okfn.de'
+url: 'https://okfn.de'
 staticurl: /static/
 exclude:
   - "CNAME"
