datenschule-banner translation

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -75,6 +75,7 @@ start:
     Du möchtest über die Open Knowledge Foundation auf dem Laufenden bleiben?<br>Dann trag Dich in unseren monatlichen Newsletter ein!
   NewsletterJa: Abonnieren
   AusUnseremBlog: Aus unserem Blog
+  Banner: Mit der <a href="https://datenschule.de">Datenschule</a> nehmen wir an der Google Impact Challenge teil. <a href="https://impactchallenge.withgoogle.com/deutschland/charity/open_knowledge">Stimme für uns ab!</a>
 footer:
   license: >
     Open Knowledge Foundation Deutschland e.V. ist ein eingetragener Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben,
