--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -67,7 +67,7 @@ start:
   SpendenText: >
     Unsere Arbeit ist unabhängig, überparteilich, interdisziplinär und nicht-kommerziell. Fast alle unserer Projekte leben vom ehrenamtlichen Engagement ihrer Unterstützer. Doch auch ehrenamtliches Engagement kostet Geld.
     Deshalb freuen wir uns über jede Spende, damit wir den Menschen, die sich unter dem Dach der Open Knowledge Foundation Deutschland für freies Wissen, offene Daten und Beteiligung einsetzen, weiterhin eine gute
-    Infrastruktur bieten können. Gern nehmen wir auch projektbezogene Sachspenden an - als gemeinnützige Organisation freuen wir uns über jede Spende!
+    Infrastruktur bieten können. Gern nehmen wir auch projektbezogene Sachspenden an!
   SpendenJa: Find ich gut. Da will ich spenden.
   SpendenNein: Stop. Erstmal mehr erfahren.
   Newsletter: Newsletter
