--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -61,12 +61,13 @@ pagination:
 start:
   Slogan: Open Knowledge<br/>for the digital society
   Intro: >
-    We empower society with digital tools and open knowledge.
+    The Open Knowledge Foundation Germany is a nonprofit organization that advocates open knowledge, open data, transparency, and civil participation.
   Willkommen: >
-    Here you can learn more about our <a href="/en/verein/">organisation</a>, our <a href="/en/mission/">goals</a>  and our <a href="/en/projekte/">projects</a>.
+    Learn more about our <a href="/en/verein/">organisation</a>, our <a href="/en/mission/">goals</a>, and our <a href="/en/projekte/">projects</a>.
   Spenden: Donations
   SpendenText: >
-    Our work is independent, unbiased, interdisciplinary, and non-commercial. Almost all of our projects survive only due to the volunteers who support them. But volunteer commitment also have their cost. Therefore, we look forward to every donation that allows us to provide support and a good infrastructure to the people advocating open knowledge, open data, and participation under the aegis of the Open Knowledge Foundation Germany. We also accept project-based donations.
+    The Open Knowledge Foundation is an independent, unbiased, interdisciplinary, and nonprofit organization. Almost all of our projects are run by volunteers. 
+    Therefore, we welcome any donation that allows us to provide support and a good infrastructure to the people working for the Open Knowledge Foundation Germany. We also accept donations for specific projects.
   SpendenJa: Sounds good. I want to support OKF DE!
   SpendenNein: Hold on. Tell me more first.
   Newsletter: Newsletter
