updated email adress m.neuschaefer@okfn.de

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -181,7 +181,7 @@
   position:
   bio: "Dr. Markus Neuschäfer betreut als Projektleiter die Zusammenarbeit mit DARIAH-DE in den Bereichen Digital Humanities und Open Science. Markus engagiert sich für offene Daten in Wissenschaft und Kultur; besonders interessiert ihn die Entwicklung von Sichtbarkeit mit freien Inhalten. Vor der Open Knowledge Foundation Deutschland promovierte er in Germanistik, war an der Uni Göttingen tätig und arbeitete als Business Development Manager im Verlagswesen."
   bio_en: "Markus is project lead of DARIAH-DE and is an expert in the domain of Digital Humanities and Open Science. He engages with Open Data in Science and Culture and is especially curious about the visibility of open content. He holds a PhD German Philology, worked at the University of Göttingen and developed Open Science business models in publishing. He also supports the volunteer platform refugeephrasebook.de with webdesign and coordination."
-  mail: markus.neuschaefer@okfn.de
+  mail: m.neuschaefer@okfn.de
   twitter: mneuschaefer
   website:
   github:
