--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -306,6 +306,7 @@
   img: marcusdapp
   staff: 0
   board: 0
+  board_alumni: 1
   advisory: 0
   position: Beisitzer
   bio: "Dr. Marcus Dapp berät als Principal Consultant der OKF Central (UK) Institutionen und Verwaltungen zum Einsatz von Open Data. Davor initiierte er als IT-Stratege der Landeshauptstadt München das ePartizipationsprojekt „MOGDy (Munich Open Government Day)“, welches damals als Pionierprojekt der Verwaltung galt und in Deutschland und auf EU-Ebene ausgezeichnet wurde. In dieser Zeit half er auch mit, den Verein OKF Deutschland zu gründen. Seit zehn Jahren beschäftigt sich Dr. Dapp mit der Gestaltung offener digitaler Wertschöpfungsprozesse in unterschiedlichsten Bereichen und Sektoren: von Open Source bis Open Innovation, von Open Data bis Open Government, von Open Access bis Free Culture. Herausgefordert und weiterentwickelt wird sein eigenes Verständnis durch die regelmässige Interaktion mit Studierenden seiner Vorlesung „Digitale Nachhaltigkeit“ an der ETH Zürich, wo er zu den Auswirkungen von Softwarepatentierung auf Open Source Innovation promovierte. Dr. Dapp wird von Organisationen aus Wirtschaft und Politik als unabhängiger Berater beigezogen und spricht regelmässig auf nationalen und internationalen Veranstaltungen."
@@ -324,6 +325,19 @@
   bio_en: "Andreas Pawelke is the treasurer of the OKF DE. He currently is project manager at the World Wide Web Foundation working on open data projects in South East Asia. Previously, he has worked with the Deutsche Gesellschaft für Internationale Zusammenarbeit, the Federal Ministry of the Interior, and as a seconded employee with UN Global Pulse. Andreas lives in Freiburg and supports the local open data movement in the city. He studied Political Science in Berlin, Darmstadt, and Lausanne."
   mail: andreas.pawelke@okfn.de
   twitter: pa_wela
+  website:
+
+- name: Chrstian Kreutz
+  img: christiankreutz
+  staff: 0
+  board: 0
+  board_alumni: 1
+  advisory: 0
+  position: Beisitzer
+  bio: "Christian Kreutz war einer der Gründungsmitglieder der Open Knowledge Foundation und baute die Organisten in den ersten 3 Jahren, als Vorstandsmitglied und mit einer Reihe von Projekte im Bereich der Finanztransparenz und Bürgerbeteiligung, mit auf. Er arbeitet weiterhin an Open Data Projekten und widmet sich ansonsten vollständig seinem Unternehmen, welches neue Wege im Bereich digitaler Innovation und Open Data geht: <a href='www.crisscrossed.de'>www.crisscrossed.de</a>."
+  bio_en: "Christian Kreutz war einer der Gründungsmitglieder der Open Knowledge Foundation und baute die Organisten in den ersten 3 Jahren, als Vorstandsmitglied und mit einer Reihe von Projekte im Bereich der Finanztransparenz und Bürgerbeteiligung, mit auf. Er arbeitet weiterhin an Open Data Projekten und widmet sich ansonsten vollständig seinem Unternehmen, welches neue Wege im Bereich digitaler Innovation und Open Data geht: www.crisscrossed.de. "
+  mail:
+  twitter:
   website:
 
 - name: Sören Auer
