--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -327,7 +327,7 @@
   twitter: pa_wela
   website:
 
-- name: Chrstian Kreutz
+- name: Christian Kreutz
   img: christiankreutz
   staff: 0
   board: 0
