updated bela's description

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -77,8 +77,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Bela ist seit Januar 2015 bei der OKF DE angestellt und arbeitet gegenwärtig zusammen mit Anna für das EU Projekt OpenBudgets. Er hat einen Master in „European Studies on Society, Science & Technology“ in Maastricht und unterstützt die OKF DE in Sachen Öffentlichkeitsarbeit (Newsletter, Blogeinträge und Pressearbeit) sowie bei Übersetzungen und Grafikdesign. Er startete im November 2014 als Praktikant bei der OKF DE."
-  bio_en: "Bela is with the OKF DE since November 2014 and currently works for the project OpenBudgets.eu. He holds a degree in European Studies on Society, Science and Technology and mainly works in public relations, communication, and graphic design. He is excited about the variety of practical manifestations and societal implications that arise from sharing knowledge and skills."
+  bio: "Bela setzt sich zusammen mit Anna bei [OpenBudgets](https://okfn.de/projekte/openbudgets/) für mehr Transparenz und Rechnenschaft im Bereich der Haushaltsgestaltung in Europa ein. Er ist spezialisiert auf Öffentlichkeitsarbeit, Kommunikation und Designaufgaben und verfasst den monatlichen Newsletter der OKF DE. Er hält einen Master in „European Studies on Society, Science & Technology“ und startete im November 2014 bei der OKF DE."
+  bio_en: "Bela tries to bring more transparency to budget data in Europe with [OpenBudgets](https://okfn.de/projekte/openbudgets/). He compiles the monthly OKF newsletter and is specialized in public relations, communication, and graphic design. He holds a degree in European Studies on Society, Science and Technology and joined OKF DE in 2014"
   mail: bela.seeger@okfn.de
   twitter: belaseeger
   website:
