--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -78,7 +78,7 @@
   advisory: 0
   position:
   bio: "Bela setzt sich zusammen mit Anna bei [OpenBudgets](https://okfn.de/projekte/openbudgets/) für mehr Transparenz und Rechnenschaft im Bereich der Haushaltsgestaltung in Europa ein. Er ist spezialisiert auf Öffentlichkeitsarbeit, Kommunikation und Designaufgaben und verfasst den monatlichen Newsletter der OKF DE. Er hält einen Master in „European Studies on Society, Science & Technology“ und startete im November 2014 bei der OKF DE."
-  bio_en: "Bela tries to bring more transparency to budget data in Europe with [OpenBudgets](https://okfn.de/projekte/openbudgets/). He compiles the monthly OKF newsletter and is specialized in public relations, communication, and graphic design. He holds a degree in European Studies on Society, Science and Technology and joined OKF DE in 2014"
+  bio_en: "Bela tries to bring more transparency to budget data in Europe with [OpenBudgets](https://okfn.de/projekte/openbudgets/). He is specialized in public relations, communication, and graphic design and compiles the monthly OKF newsletter. He holds a degree in European Studies on Society, Science and Technology and joined OKF DE in 2014."
   mail: bela.seeger@okfn.de
   twitter: belaseeger
   website:
