--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -89,7 +89,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Fiona ist Community Organizerin für Code for Germany. Sie betreut 20 Open Knowledge Labs in Deutschland und arbeitet gemeinsam mit Julia Kloiber am Projekt. Nebenbei studiert sie Europäische Ethnologie an der Humboldt-Universität zu Berlin und engagiert sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung."
+  bio: "Fiona ist seit 2014 dabei und betreut und berät als Community Organizerin im Projekt Code for Germany über 20 Open Knowledge Labs in Deutschland. Nebenbei studiert sie Techniksoziologie an der Technischen Universität Berlin. Privat engagiert sie sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung, im Chaos Computer Club und interessiert sich für Gleichberechtigung in der IT. 2016 leitet Fiona das Projekt 'Digital Refugee Labs' im Rahmen von Code for Germany.
   bio_en: "Fiona is community organizer for Code for Germany. She supports 20 Open Knowledge Labs together with Julia and Eileen and studies Technology/Sociology at the Technical University in Berlin. She has strong ties to a large number of NGOs that resonate with OKF DE's core values and engages in the field of digital literacy for a number of years."
   mail: fiona.krakenbuerger@okfn.de
   twitter: Fotografiona
