fix team description

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -89,8 +89,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Fiona ist seit 2014 dabei und betreut und berät als Community Organizerin im Projekt Code for Germany über 20 Open Knowledge Labs in Deutschland. Nebenbei studiert sie Techniksoziologie an der Technischen Universität Berlin. Privat engagiert sie sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung, im Chaos Computer Club und interessiert sich für Gleichberechtigung in der IT. 2016 leitet Fiona das Projekt 'Digital Refugee Labs' im Rahmen von Code for Germany.
-  bio_en: "Fiona is community organizer for Code for Germany. She supports 20 Open Knowledge Labs together with Julia and Eileen and studies Technology/Sociology at the Technical University in Berlin. She has strong ties to a large number of NGOs that resonate with OKF DE's core values and engages in the field of digital literacy for a number of years."
+  bio: "Fiona ist seit 2014 dabei und betreut und berät als Community Organizerin im Projekt Code for Germany über 20 Open Knowledge Labs in Deutschland. Nebenbei studiert sie Techniksoziologie an der Technischen Universität Berlin. Privat engagiert sie sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung, im Chaos Computer Club und interessiert sich für Gleichberechtigung in der IT. 2016 leitet Fiona das Projekt 'Digital Refugee Labs' im Rahmen von Code for Germany."
+  bio_en: "Fiona is Code for Germany's Community Organizer. She supports 20 Open Knowledge Labs together with Julia and Eileen and studies Technology/Sociology at the Technical University in Berlin. She has strong ties to a large number of NGOs that resonate with OKF DE's core values and engages in the field of digital literacy for a number of years. In 2016, Fiona will be project lead in the Code for Germany work stream 'Digital Refugee Labs'."
   mail: fiona.krakenbuerger@okfn.de
   twitter: Fotografiona
   website: http://arduina.github.io/arduina.net/
